fix: hide scrollbar from navigation tabs

--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -123,7 +123,6 @@ img {
 .nav-tabs {
   display: block;
   margin-bottom: $space-default;
-  overflow-x: auto;
   white-space: nowrap;
 
   .nav-item {
